fix z-index of extra pic

--- a/app/assets/stylesheets/sales_clerk.css.scss
+++ b/app/assets/stylesheets/sales_clerk.css.scss
@@ -139,16 +139,12 @@ text-shadow: rgb(255, 255, 255) 0px 0px 10px;
 }
 
 .extrapic {
-  position: fixed;
-  left: 677px;
-  top: 25px;
-  z-index: 1320;
-  text-align: right;
-}
-
-.group-wrapper.extrapic img {
-  height: auto;
-  width: 500px; }
+  	text-align: right;
+		img {
+		  height: 78px;
+			margin-top: -20px;
+		}
+	}
 
 .intro {
   padding-top: 20px;
@@ -173,7 +169,7 @@ text-shadow: rgb(255, 255, 255) 0px 0px 10px;
   width: 85%; }
 
 .intro-text p{
-  font-size: 15px; 
+  font-size: 15px;
   line-height: 120%;
 	}
 
@@ -209,9 +205,8 @@ text-shadow: rgb(255, 255, 255) 0px 0px 10px;
   font-size: 1.5rem;
   margin: 0px;
 	width: 100%;
-	z-index: 1;
 	border-bottom: 1px solid #0078ff;
-  
+
 }
 
 .square-image {
@@ -433,17 +428,14 @@ color: black !important;
 .dropdown-menu {
   background-color: $highlight-2;
   color: #ffffff;
-  z-index: 10000;
   }
 
 .dropdown-menu > li > a {
   color: #ffffff;
-  z-index: 10000;
 }
 
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
-  background-color: $highlight-8; 
-  z-index: 10000;
+  background-color: $highlight-8;
   }
 
 .popover, .popover-title {
